Updated project files

--- a/project1.vcxproj
+++ b/project1.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="task2.cpp" />
+    <ClCompile Include="task7.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="taskheader.h" />
