--- a/project1.vcxproj
+++ b/project1.vcxproj
@@ -128,8 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="task10.cpp" />
     <ClCompile Include="task2.cpp" />
     <ClCompile Include="task7.cpp" />
+    <ClCompile Include="task9.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="taskheader.h" />
