--- a/project1.vcxproj.filters
+++ b/project1.vcxproj.filters
@@ -21,6 +21,15 @@
     <ClCompile Include="task2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="task7.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="task10.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="task9.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="taskheader.h">
